# Vulkron

./: .gitignore  CMakeLists.txt  README.md  VulkronConfig.cmake.in
build-scripts/: build.py  examples.py  install.py
build-scripts/linux/: conda_activate.sh  conda_config.sh
build-scripts/windows/: conda_config.ps1
docs/: index.html  script.js  style.css
docs/api/: index.html
examples/: CMakeLists.txt
examples/vulkron-gui/: CMakeLists.txt  main.cpp
include/gpu/: context.hpp
include/support/common/: config.hpp  immovable.hpp  noncopyable.hpp  nonmovable.hpp
include/ui/: window.hpp
platform/linux/: build_debug.sh  build_release.sh  configure_conda_env.sh
platform/windows/: activate_conda.ps1  build_debug.ps1  build_release.ps1  configure_conda_env.ps1  install.ps1
source/: CMakeLists.txt
source/gpu/: CMakeLists.txt  context.cpp
source/gpu/vulkan/: device.cpp  device.hpp  structchain.hpp  surface.cpp  surface.hpp
source/ui/: CMakeLists.txt  window.cpp
source/ui/platform/: platform.hpp  win32.cpp  win32.hpp
source/vulkron/: CMakeLists.txt  main.cpp
